--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@edgestore/react": "^0.1.6",
-    "@edgestore/server": "^0.1.6",
     "@next/eslint-plugin-next": "14.0.1",
     "bcrypt": "5.1.1",
+    "express": "^4.18.2",
+    "lucide-react": "^0.316.0",
     "mongoose": "8.0.0",
     "next": "14.0.1",
     "next-auth": "5.0.0-beta.3",
     "react": "18",
     "react-dom": "18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "4.11.0",
     "recharts": "2.9.0",
+    "tailwind-merge": "^2.2.1",
     "use-debounce": "9.0.4",
     "zod": "^3.22.4"
   },
