--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
-    "bcrypt": "5.1.1",
+    "axios": "^1.6.8",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.316.0",
     "mongoose": "8.0.0",
     "next": "14.0.1",
@@ -20,6 +21,7 @@
     "react-dom": "18",
     "react-dropzone": "^14.2.3",
     "react-icons": "4.11.0",
+    "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
     "tailwind-merge": "^2.2.1",
     "use-debounce": "9.0.4",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/react": "18.2.47",
     "eslint": "8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "typescript": "5.4.5"
   }
 }
