--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
     "axios": "^1.6.8",
+    "cropperjs": "^1.6.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.316.0",
@@ -20,6 +21,7 @@
     "react": "18",
     "react-dom": "18",
     "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.8",
     "react-icons": "4.11.0",
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
