--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/eslint-plugin-next": "14.0.1",
     "axios": "^1.6.8",
     "cropperjs": "^1.6.2",
+    "es6-promise": "^4.2.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.316.0",
@@ -26,6 +27,7 @@
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
     "tailwind-merge": "^2.2.1",
+    "typedarray": "^0.0.7",
     "use-debounce": "9.0.4",
     "zod": "^3.22.4"
   },
