--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@next/eslint-plugin-next": "14.0.1",
     "axios": "^1.6.8",
     "cropperjs": "^1.6.2",
@@ -17,7 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.316.0",
     "mongoose": "8.0.0",
-    "next": "14.0.1",
+    "next": "^15.0.2",
     "next-auth": "5.0.0-beta.3",
     "react": "18",
     "react-dom": "18",
