--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,10 @@
   "rules": {
     "react/prop-types": "off",
     "no-unused-vars": "warn"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
   }
 }
