--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "@next/eslint-plugin-next": "14.0.1",
     "axios": "^1.6.8",
     "cropperjs": "^1.6.2",
