--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cropperjs": "^1.6.2",
     "es6-promise": "^4.2.8",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "jquery-mask-plugin": "^1.14.16",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.316.0",
     "mongoose": "8.0.0",
@@ -31,6 +33,7 @@
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.8",
     "react-icons": "4.11.0",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-toastify": "^10.0.5",
     "recharts": "2.9.0",
     "tailwind-merge": "^2.2.1",
